# Soliton-Debris-Model

./: .gitignore  LICENSE  Makefile  README.md  generate_radar_emplacements.m  propagator.m  pyproject.toml
.github/workflows/: python-app.yml
docs/: local-storage.md
isr_debris_sim/: Makefile  pyproject.toml  requirements.txt
isr_debris_sim/isr_debris_sim/: __main__.py
isr_debris_sim/isr_debris_sim/cli/: init.py
isr_debris_sim/isr_debris_sim/core/: config.py
isr_debris_sim/isr_debris_sim/core/prompts/: init.py  spacetrack.py
isr_debris_sim/isr_debris_sim/core/storage/: bootstrap.py
isr_debris_sim/isr_debris_sim/features/madrigal/: service.py
isr_debris_sim/isr_debris_sim/features/spacetrack/: service.py
isr_debris_sim/isr_debris_sim/shared/: osutils.py
isr_debris_sim/isr_debris_sim/shared/enums/: prompts.py
isr_debris_sim/isr_debris_sim/shared/prompts/: validators.py
isr_debris_sim/tests/: conftest.py  test_main.py
matlab_source/: Code_Analysis.md  FUNCTION_MAIN_Propagate_Orbits_Simulate_Solitons.m  FUNCTION_SUB_1_Radar_Data_Processing.m  FUNCTION_SUB_2_Filter.m  GetLookWindow.m  OverflyTimeFunction.asv  OverflyTimeFunction.m  ReadMadrigalDataFunction.m  UpdateSoliton.m  ccmc_params_local.m  column_sort.m  find_orbital_debris.m  generate_radar_emplacements.m  read_radar_track_xml.m
