[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "isr-debris-simulator"
version = "0.0.1"
authors = [
	{name = "Wasif Islam", email = "islamwasif3@gmail.com"},
	{name = "Adrienne Rudolph", email = "rudolpa@gmail.com"},
]

description = "Experimental space debris simulator"
requires-python = ">=3.12"

dependencies = [
	"iri2016",
]

[project.scripts]
isr-debris-sim = "isr_debris_sim.__main__:main"

[tool.mypy]
warn_return_any = true
strict = true

[tool.ruff]
line-length = 93

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001", "D100", "D103", "D104", "D101", "S101", "T201"]
